Add NavBar components

--- a/react-frontend/src/index.css
+++ b/react-frontend/src/index.css
@@ -5,10 +5,14 @@
 @font-face {
   font-family: 'DolceVita';
   src: local('DolceVitaHeavyBold'),
-  url('./fonts/Dolce-Vita-Heavy-Bold.ttf') format('truetype');
+  url('./assests/fonts/Dolce-Vita-Heavy-Bold.ttf') format('truetype');
   font-weight: bold;
 }
 
 .font-face-dolce-vita-bold {
   font-family: 'DolceVita';
+}
+
+html {
+  background-color: #eff4f5;
 }
